# internal/router/review_router.go
@@ -18,10 +18,10 @@ func (r Router) AddReviewRouter(rg *gin.RouterGroup, mongoDB *mongo.Database) {
 
 	reviewRouter := rg.Group("review")
 
-	reviewRouter.POST("/", middleware.JWTAuthMiddleWare(tokenmode.TokenMode.ACCESS_TOKEN), cont.CreateReview)
-	reviewRouter.GET("/", middleware.JWTAuthMiddleWare(tokenmode.TokenMode.ACCESS_TOKEN), cont.GetReviews)
-	reviewRouter.GET("/:review_id", middleware.JWTAuthMiddleWare(tokenmode.TokenMode.ACCESS_TOKEN), cont.GetReviewByID)
-	reviewRouter.GET("/seller/:seller_id", middleware.JWTAuthMiddleWare(tokenmode.TokenMode.ACCESS_TOKEN), cont.GetReviewsBySellerID)
-	reviewRouter.PUT("/:review_id", middleware.JWTAuthMiddleWare(tokenmode.TokenMode.ACCESS_TOKEN), cont.UpdateReview)
+	reviewRouter.POST("/", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.CreateReview)
+	reviewRouter.GET("/", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.GetReviews)
+	reviewRouter.GET("/:review_id", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.GetReviewByID)
+	reviewRouter.GET("/seller/:seller_id", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.GetReviewsBySellerID)
+	reviewRouter.PUT("/:review_id", middleware.JWTAuthMiddleWare(tokenmode.ACCESS_TOKEN), cont.UpdateReview)
 
 }
